[metadata]
# replace with your username:
name = FacilityLocation
version = 0.0.1
author = Hugh Dickinson
author_email = hugh.dickinson@open.ac.uk
description = Facility Location clustering algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ou-escape-eco/FacilityLocation
project_urls =
    Bug Tracker = https://github.com/ou-escape-eco/FacilityLocation/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
